# cortex

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: app_state.rs  brain.rs  connectivity.rs  infra_config.rs  lanes.rs  lib.rs  monitors.rs  preview.rs  pricing.rs  redact.rs  repo_map.rs  sys.rs  usage.rs  watch_mode.rs  websearch.rs  worktrees.rs
src-tauri/src/agents/: adapter.rs  aider_spec.rs  anthropic_direct.rs  claude_cli.rs  claude_spec.rs  cli_discovery.rs  codex_spec.rs  e2e_fake.rs  gateway_remote.rs  gemini_spec.rs  grok_spec.rs  local_cli.rs  local_runtime.rs  mistral_vibe_spec.rs  mod.rs  ollama.rs  oneshot.rs  openai_compat.rs  openai_direct.rs  qwen_spec.rs  registry.rs  roles.rs
src-tauri/src/agui/: mod.rs  server.rs  translator.rs
src-tauri/src/chat_import/: mod.rs  parse.rs  pipeline.rs  pull.rs
src-tauri/src/commands/: account_usage.rs  agents.rs  agui.rs  ai_debugger.rs  apply_edits.rs  approvals.rs  arch_diagram.rs  ask_router.rs  auto_test.rs  backup.rs  batch_runner.rs  bookmarks.rs  brain.rs  brain_import.rs  brain_toc.rs  changelog.rs  channels.rs  chat.rs  chat_history.rs  chat_import.rs  chat_meta.rs  chatgpt_import.rs  checkpoints.rs  commit_suggest.rs  condense.rs  config_files.rs  config_watcher.rs  conflict_resolver.rs  context.rs  context_picker.rs  cookbook.rs  cost_tracker.rs  crash.rs  custom_slashes.rs  daily_journal.rs  deep_research.rs  dep_audit.rs  dep_graph.rs  diagnostics.rs  doc_gen.rs  (+91 more)
src-tauri/src/gateway/: client.rs  mod.rs  tool_virtualizer.rs
src-tauri/src/git/: history.rs  mod.rs  working.rs
src-tauri/src/history_sync/: config.rs  cookies.rs  mod.rs  scheduler.rs
src-tauri/src/hooks/: mod.rs  runner.rs
src-tauri/src/mcp/: client.rs  config.rs  mod.rs
src-tauri/src/memory/: chat_history.rs  chroma.rs  embed.rs  markdown.rs  mod.rs  obsidian_rest.rs  snapshots.rs  sources.rs  sync.rs  writer.rs
src-tauri/src/prp/: mod.rs  (+3 more)
src-tauri/tests/: integration.rs
(+415 files in other folders)
