[package]
name = "cortex"
version = "0.2.2"
description = "Cortex — central-brain desktop app for orchestrating coding agents"
authors = ["NetworkBound"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "cortex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "socks"], default-features = false }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "2"
keyring = "3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
async-trait = "0.1"
which = "7"
eventsource-stream = "0.2"
ulid = { version = "1", features = ["serde"] }
notify = "7"
notify-rust = "4"
yaml-front-matter = "0.1"
dirs = "5"
walkdir = "2"
regex = "1"
bytes = "1"
once_cell = "1"
tokio-util = { version = "0.7", features = ["io"] }
parking_lot = "0.12"
serde_yaml = "0.9"
toml = "0.8"
tar = "0.4"
flate2 = "1"
globset = "0.4"
tauri-plugin-global-shortcut = "2"
aes-gcm = "0.10"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip"] }
tower = "0.5"
portable-pty = "0.8"
base64 = "0.22"
ring = "0.17"

[dev-dependencies]
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]
# Standalone (no-homelab) build variant: compiles the direct provider
# adapters (Anthropic / OpenAI) so Cortex can sign in to providers directly
# instead of routing through the Cortex Gateway. Off by default — the normal
# build is bit-identical to today's when this flag is absent.
standalone = []
